
  next
==========================
- NEW: settings files code completion support (IVYDE-22)
- NEW: Option to resolve to local eclipse projects (IVYDE-89) (thanks to Antony James Wilkins and Matt Goldspink)
- NEW: Add errors marker to the Ivy container (IVYDE-78)
- NEW: Handle a project: scheme for the path of the ivysettings.xml (IVYDE-94)
- NEW: Need CleanCache task in context menu (IVYDE-114)

- IMPROVE: Split the configuration panel (IVYDE-119)
- IMPROVE: Support latest dev version of ivy.jar in IVYDE build (IVYDE-122)
- IMPROVE: IVYDE classpath container should support bundle types by default (IVYDE-121)
- IMPROVE: Set current working dir to eclipse project location (IVYDE-52)
- IMPROVE: Make the classpath entries order configuration UI more intuitive (IVYDE-104)
- IMPROVE: Retrieve after resolve feature does not clean target directory first (IVYDE-105)

- FIX: IvyDE IvyPreferencePage does not work with eclipse 3.2 (IVYDE-120)
- FIX: Can't close ivy console in eclipse (IVYDE-123)
- FIX: IvyDE does not do property value expansion (IVYDE-90)
- FIX: Resolve in workspace does not pick up all projects in workspace (IVYDE-118) (thanks to Matt Goldspink)
- FIX: Ivy editor: code completion missing for matcher attribute of conflicts manager (IVYDE-99)
- FIX: The project dependencies and the errors markers are conflicting (IVYDE-116) 
- FIX: same jar files get downloaded 3 times (binary, javadoc and sources jar files are identical) (IVYDE-117)
- FIX: IvyDE crashes during resolve due to an incompatibility with Eclipse 3.2 (IVYDE-108)
- FIX: Ivy preferences page mentions ivyconf not ivysettings (IVYDE-103)
- FIX: Resolve is not triggered anymore with Eclipse 3.4 (IVYDE-110)
- FIX: An incorrect configuration of a container make 3 error popup (IVYDE-112)
- FIX: IvyDE does not honour the "validate" Attribute in a ivysetting file (IVYDE-96)

  version 2.0.0 alpha1
===========================