@@ -45,20 +45,30 @@ There is a global configuration page, which control the behaviour of every Ivy i
 The global configuration can be found in the global configuration panel of Eclipse (menu Window>Preferences for Windows and Linux users, Eclipse>Preferences for mac users), and select the item Ivy.
 
 <img src="images/pref.jpg"/><br/>
-<ol><b>Preference fields:</b>
+<ul><b>Global settings:</b>
 	<li><u>Ivy settings URL:</u> specify here the path to your ivy settings file. Leave it blank to use Ivy default resolvers</li>
-	<li><u>Retrieve option:</u> specify here if you want ivy to do a retrieve after the resolve.<br/> If you check retrieve you must provide a the retrieve pattern. Check <a href="../../../history/latest-milestone/use/retrieve.html">Ivy documentation</a> for pattern explanation.</li>
+</ul>
+<ul><b>Retrieve configuration:</b><br/>
+    If checked, some retrieve job will be triggered after each the resolve.<br/>
+	<li><u>Retrieve pattern:</u> the pattern to use for the retrieve. Check <a href="../../../history/latest-milestone/use/retrieve.html">Ivy documentation</a> for pattern explanation.</li>
+        <li><u>Delete old retrieve artifacts:</u> on each retrieve, the previously retrieved libraries will be removed (similar to the sync argument in the ant task)</li>
+        <li><u>Retrieve configurations:</u> the configurations to retrieve (a comma separated list)</li>
+        <li><u>Retrieve types:</u> the types of artifact to retrieve (a comma separated list)</li>
+</ul>
+<ul><b>Classpath container configuration:</b>
+	<li><u>Project dependencies:</u> IvyDE can try to make dependencies between project more than to jars into a repository.
+	    <u><i>Important note:</i></u> this feature is quite limited for now, it just tries to replace jar dependencies with project dependencies, based on the module id of the jar, and the projects configured to use IvyDE; the version is not taken into consideration, and even if a project match a dependency, the jar of the dependency have to be resolved from a repository.</li>
+	<li><u>Order alphabetically:</u> by default in the classpath container the entries are ordered by order of declaration. When there are many entries, it could be useful to have them ordered alphabetically so that you can find them faster.</li>
 	<li><u>Accepted types:</u> a comma separated list of extensions which will make IvyDE add the artifact to the classpath</li>
 	<li><u>Sources types:</u> a comma separated list of ivy "type" which will make IvyDE consider them as sources</li>
 	<li><u>Sources suffixes:</u> a comma separated list of suffixes which will make IvyDE attach as source the artifact with the suffix to the artifact without the suffix. For instance, "commons-lang-sources.jar" will be attached as source to "commons-lang.jar" with the default value.</li>
 	<li><u>Javadoc types:</u> same as sources types but for javadocs</li>
 	<li><u>Javadoc suffixes:</u> same as sources suffixes but for javadocs</li>
-	<li><u>Order alphabetically:</u> by default in the classpath container the entries are ordered by order of declaration. When there are many entries, it could be useful to have them ordered alphabetically so that you can find them faster.</li>
-	<li><u>Project dependencies:</u> IvyDE can try to make dependencies between project more than to jars into a repository.
-	    <u><i>Important note:</i></u> this feature is quite limited for now, it just tries to replace jar dependencies with project dependencies, based on the module id of the jar, and the projects configured to use IvyDE; the version is not taken into consideration, and even if a project match a dependency, the jar of the dependency have to be resolved from a repository.</li>
+</ul>
+<ul><b>Editor information:</b>
 	<li><u>Organisation:</u> your company name for ivy editor completion </li>
 	<li><u>Organisation URL:</u> your company web site url for ivy editor completion </li>
-</ol>
+</ul>
 
 </textarea>
 <script type="text/javascript">xooki.postProcess();</script>
